--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   <br>
 
   <h4 class="header">Uge {{ week_number }}</h4>
-  <h3 class="header">{{ today_date }}</h3>  
+  <h3 class="header">{{ today_date|date:'d/m/y' }}</h3>  
 
   <div class="tablediv">
     <table class="fixed">
