added  edit func

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
       </tr>
     {% endfor %}
     </table>
+    <div class="center"><a href="{% url 'edit_day' %}">rediger</a></div>
     <br>
   </div>
   <h3 class="header">Dagstotal {{ day_total }}</h3>
