--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,43 @@
 body {
   background: rgb(206, 206, 206);
   font-family: Avenir;
-  color: rgb(34, 34, 34);
+  color: rgb(49, 49, 49);
 }
 
 .button {
+  background-color: rgb(242, 242, 242);
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 6px 0px rgba(0, 0, 0, 0.01), 0px 6px 5px rgba(0, 0, 0, 0.02), 0px 2px 20px rgba(0, 0, 0, 0.1);
+  color: black;
+  padding: 20px 70px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8%;
+  margin: 10px;
+  box-sizing: border-box;
+  position: relative;
+  cursor: pointer;
+}
+
+.sml-button {
+  background:  rgb(242, 242, 242);
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 6px 0px rgba(0, 0, 0, 0.01), 0px 6px 5px rgba(0, 0, 0, 0.02), 0px 2px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 4px; 
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 100px;
+  cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  margin-top: 20px;
+}
+
+.gem-button {
   background-color: rgb(242, 242, 242);
   border-style: solid;
   border-width: 2px;
@@ -14,9 +47,10 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 137%;
   border-radius: 8%;
-  margin: 10px;
+  margin-top: 50px;
+  width: 100%;
 }
 
 .center {
@@ -25,6 +59,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 6px;
+}
+
+.margintop {
   margin-top: 45px;
 }
 
@@ -35,7 +72,7 @@ body {
 
 a {
   text-decoration: none;
-  color: rgb(34, 34, 34);
+  color: rgb(49, 49, 49);
 }
 
 table.fixed { table-layout:fixed; }
@@ -47,9 +84,14 @@ table {
 }
 
 th, td {
-  border: 1px solid #ddd; 
+  border: 1px solid #ddd;
+  text-align: center;
 }
 
 .tablediv {
   padding: 10px;
+}
+
+.header {
+  margin: 6px;
 }
