--- a/WorkTimer/static/style.css
+++ b/WorkTimer/static/style.css
@@ -9,7 +9,9 @@ body {
   border: 2px solid rgb(0, 0, 0);
   box-shadow: 0px 6px 0px rgba(0, 0, 0, 0.01), 0px 6px 5px rgba(0, 0, 0, 0.02), 0px 2px 20px rgba(0, 0, 0, 0.1);
   color: black;
-  padding: 20px 70px;
+  padding: 15px;
+  height: 60px;
+  width: 190px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -95,4 +97,10 @@ th, td {
 
 .header {
   margin: 6px;
+}
+
+.sub-text {
+  font-size: 60%;
+  padding: 0;
+  margin: 0;
 }
