--- a/templates/edit_day.html
+++ b/templates/edit_day.html
@@ -20,10 +20,10 @@
       {% for data in day_data %}
       <tr>
         <td>
-          <a href="{% url 'edit_entry' data.ids.0 %}">{{ data.start|date:'H:i' }}</a>
+          <a href="{% url 'edit_entry' data.ids.0 %}?next={{ request.path|urlencode }}">{{ data.start|date:'H:i' }}</a>
         </td>
         <td>
-          <a href="{% url 'edit_entry' data.ids.1 %}">{{ data.end|date:'H:i' }}</a>
+          <a href="{% url 'edit_entry' data.ids.1 %}?next={{ request.path|urlencode }}">{{ data.end|date:'H:i' }}</a>
         </td>
         <td>
           {{ data.dur }}
@@ -34,6 +34,7 @@
       </tr>
     {% endfor %}
     </table>
+    <div class="center"><a href="{% url 'edit_all_days' %}">rediger alle</a></div>
     <br>
   </div>
   
