--- a/templates/all_weeks_view.html
+++ b/templates/all_weeks_view.html
@@ -36,8 +36,12 @@
   </div>
 </div>
 
-<div class="center">
-  <a href="{% url 'index' %}" class="sml-button">Tilbage</a>
+  <div class="center">
+    <a href="{% url 'show_overview' %}" class="sml-button">Overblik</a>
+  </div>
+
+  <div class="center">
+    <a href="{% url 'index' %}" class="sml-button">Tilbage</a>
   </div>
 </div>
 
