--- a/templates/overview.html
+++ b/templates/overview.html
@@ -23,4 +23,7 @@
     <br>
     {% endfor %}
 
+    <div class="center">
+        <a href="{% url 'index' %}" class="sml-button">Tilbage</a>
+    </div>
 {% endblock %}
