--- a/templates/all_weeks_view.html
+++ b/templates/all_weeks_view.html
@@ -12,6 +12,7 @@
       <tr>
         <th>Uge</th>
         <th>total</th>
+        <th></th>
         <th>+-</th>
         <th>Akkum</th>
       </tr>
@@ -22,6 +23,9 @@
         </td>
         <td>
           {{ data.week_total }}
+        </td>
+        <td>
+          {{ data.week_goal }}
         </td>
         <td {% if data.week_diff.0 == "-" %} style="color: red;" {% else %} style="color: green;" {% endif %}>
           {{ data.week_diff }}
